--- a/Colab_github_test.ipynb
+++ b/Colab_github_test.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Colab_github_test.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMxURkamPQ/qkc9Yof2WfK/",
+      "authorship_tag": "ABX9TyPdPdTC5Ohpx4QCmZltfHyB",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -14,27 +14,27 @@
     },
     "widgets": {
       "application/vnd.jupyter.widget-state+json": {
-        "6ac8e50ae0814b39a9d580c03db7ad7d": {
+        "9fc2453d3e4a4a808cebd5862189a45b": {
           "model_module": "@jupyter-widgets/controls",
-          "model_name": "BoxModel",
+          "model_name": "VBoxModel",
           "state": {
-            "_view_name": "BoxView",
+            "_view_name": "VBoxView",
             "_dom_classes": [],
-            "_model_name": "BoxModel",
+            "_model_name": "VBoxModel",
             "_view_module": "@jupyter-widgets/controls",
             "_model_module_version": "1.5.0",
             "_view_count": null,
             "_view_module_version": "1.5.0",
             "box_style": "",
-            "layout": "IPY_MODEL_fe1ba57c9e7146768944b29de35f5225",
+            "layout": "IPY_MODEL_b425601384e441cda549f919a61aab15",
             "_model_module": "@jupyter-widgets/controls",
             "children": [
-              "IPY_MODEL_76350f926a0d484da96f18b521c9cc16",
-              "IPY_MODEL_d00ee66bbc6e417db586193fe32477bb"
+              "IPY_MODEL_2343c6e967124da8b087f312d142c5cc",
+              "IPY_MODEL_a7e3c9f2f3a84ced90d591580ced028e"
             ]
           }
         },
-        "fe1ba57c9e7146768944b29de35f5225": {
+        "b425601384e441cda549f919a61aab15": {
           "model_module": "@jupyter-widgets/base",
           "model_name": "LayoutModel",
           "state": {
@@ -47,10 +47,10 @@
             "_model_module_version": "1.2.0",
             "_view_count": null,
             "flex_flow": null,
-            "width": null,
+            "width": "100%",
             "min_width": null,
             "border": null,
-            "align_items": null,
+            "align_items": "center",
             "bottom": null,
             "_model_module": "@jupyter-widgets/base",
             "top": null,
@@ -81,42 +81,42 @@
             "object_fit": null,
             "grid_auto_columns": null,
             "margin": null,
-            "display": null,
+            "display": "flex",
             "left": null
           }
         },
-        "76350f926a0d484da96f18b521c9cc16": {
+        "2343c6e967124da8b087f312d142c5cc": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "LabelModel",
           "state": {
             "_view_name": "LabelView",
-            "style": "IPY_MODEL_67d74c482dbc444c85bb96e68998176d",
+            "style": "IPY_MODEL_49b591c315534610ad93696ac7aca71a",
             "_dom_classes": [],
             "description": "",
             "_model_name": "LabelModel",
             "placeholder": "​",
             "_view_module": "@jupyter-widgets/controls",
             "_model_module_version": "1.5.0",
-            "value": "Label :",
+            "value": "I feel satisfied with my job",
             "_view_count": null,
             "_view_module_version": "1.5.0",
             "description_tooltip": null,
             "_model_module": "@jupyter-widgets/controls",
-            "layout": "IPY_MODEL_0676e3e9f29a4d87b912908950261370"
+            "layout": "IPY_MODEL_cb9d3d429a624e3cb67319de844f7b2d"
           }
         },
-        "d00ee66bbc6e417db586193fe32477bb": {
+        "a7e3c9f2f3a84ced90d591580ced028e": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "RadioButtonsModel",
           "state": {
             "_options_labels": [
-              "Option 1",
-              "Option 2",
-              "Option 3",
-              "Option 4 ...................... "
+              "Agree",
+              "Somewhat Agree",
+              "Somewhat Disagee",
+              "Disagree"
             ],
             "_view_name": "RadioButtonsView",
-            "style": "IPY_MODEL_6abac11337644249b2ca9a0916a895d9",
+            "style": "IPY_MODEL_67a6a93079c24a1080ea9a111d61f85c",
             "_dom_classes": [],
             "description": "",
             "_model_name": "RadioButtonsModel",
@@ -128,10 +128,10 @@
             "_view_module_version": "1.5.0",
             "description_tooltip": null,
             "_model_module": "@jupyter-widgets/controls",
-            "layout": "IPY_MODEL_0e1c880f3959491f8e56f55fb1c091b2"
+            "layout": "IPY_MODEL_5393e55ac4e14cf0916f02e25fbf8a0f"
           }
         },
-        "67d74c482dbc444c85bb96e68998176d": {
+        "49b591c315534610ad93696ac7aca71a": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "DescriptionStyleModel",
           "state": {
@@ -145,7 +145,7 @@
             "_model_module": "@jupyter-widgets/controls"
           }
         },
-        "0676e3e9f29a4d87b912908950261370": {
+        "cb9d3d429a624e3cb67319de844f7b2d": {
           "model_module": "@jupyter-widgets/base",
           "model_name": "LayoutModel",
           "state": {
@@ -196,7 +196,7 @@
             "left": null
           }
         },
-        "6abac11337644249b2ca9a0916a895d9": {
+        "67a6a93079c24a1080ea9a111d61f85c": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "DescriptionStyleModel",
           "state": {
@@ -210,7 +210,7 @@
             "_model_module": "@jupyter-widgets/controls"
           }
         },
-        "0e1c880f3959491f8e56f55fb1c091b2": {
+        "5393e55ac4e14cf0916f02e25fbf8a0f": {
           "model_module": "@jupyter-widgets/base",
           "model_name": "LayoutModel",
           "state": {
@@ -224,105 +224,6 @@
             "_view_count": null,
             "flex_flow": null,
             "width": "max-content",
-            "min_width": null,
-            "border": null,
-            "align_items": null,
-            "bottom": null,
-            "_model_module": "@jupyter-widgets/base",
-            "top": null,
-            "grid_column": null,
-            "overflow_y": null,
-            "overflow_x": null,
-            "grid_auto_flow": null,
-            "grid_area": null,
-            "grid_template_columns": null,
-            "flex": null,
-            "_model_name": "LayoutModel",
-            "justify_items": null,
-            "grid_row": null,
-            "max_height": null,
-            "align_content": null,
-            "visibility": null,
-            "align_self": null,
-            "height": null,
-            "min_height": null,
-            "padding": null,
-            "grid_auto_rows": null,
-            "grid_gap": null,
-            "max_width": null,
-            "order": null,
-            "_view_module_version": "1.2.0",
-            "grid_template_areas": null,
-            "object_position": null,
-            "object_fit": null,
-            "grid_auto_columns": null,
-            "margin": null,
-            "display": null,
-            "left": null
-          }
-        },
-        "1149cfbb57c1446fb22b8d143f5b3018": {
-          "model_module": "@jupyter-widgets/controls",
-          "model_name": "ToggleButtonsModel",
-          "state": {
-            "_options_labels": [
-              "Slow",
-              "Regular",
-              "Fast"
-            ],
-            "_view_name": "ToggleButtonsView",
-            "style": "IPY_MODEL_1235993172ce4b0d994e276cd217193c",
-            "_dom_classes": [],
-            "description": "",
-            "_model_name": "ToggleButtonsModel",
-            "tooltips": [
-              "Description of slow",
-              "Description of regular",
-              "Description of fast"
-            ],
-            "index": 2,
-            "button_style": "",
-            "_view_module": "@jupyter-widgets/controls",
-            "_model_module_version": "1.5.0",
-            "_view_count": null,
-            "disabled": false,
-            "_view_module_version": "1.5.0",
-            "icons": [],
-            "description_tooltip": null,
-            "_model_module": "@jupyter-widgets/controls",
-            "layout": "IPY_MODEL_3ef9ffde97134e7ba811290f5bd49fce"
-          }
-        },
-        "1235993172ce4b0d994e276cd217193c": {
-          "model_module": "@jupyter-widgets/controls",
-          "model_name": "ToggleButtonsStyleModel",
-          "state": {
-            "_view_name": "StyleView",
-            "button_width": "",
-            "_model_name": "ToggleButtonsStyleModel",
-            "description_width": "",
-            "_view_module": "@jupyter-widgets/base",
-            "_model_module_version": "1.5.0",
-            "_view_count": null,
-            "font_weight": "",
-            "_view_module_version": "1.2.0",
-            "_model_module": "@jupyter-widgets/controls"
-          }
-        },
-        "3ef9ffde97134e7ba811290f5bd49fce": {
-          "model_module": "@jupyter-widgets/base",
-          "model_name": "LayoutModel",
-          "state": {
-            "_view_name": "LayoutView",
-            "grid_template_rows": null,
-            "right": null,
-            "justify_content": null,
-            "_view_module": "@jupyter-widgets/base",
-            "overflow": null,
-            "_model_module_version": "1.2.0",
-            "_view_count": null,
-            "flex_flow": null,
-            "width": null,
             "min_width": null,
             "border": null,
             "align_items": null,
@@ -381,12 +282,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "OzsoyCZeVPSe",
-        "outputId": "a5f48044-1755-4351-e938-e809615ff7ff"
+        "outputId": "b6b04895-c88f-4615-b007-0a73703fe5a7"
       },
       "source": [
         "print(\"Hello world\")"
       ],
-      "execution_count": null,
+      "execution_count": 76,
       "outputs": [
         {
           "output_type": "stream",
@@ -403,11 +304,12 @@
         "id": "ZGXivo0wVy8x"
       },
       "source": [
-        "#@title <center> Title </center>\r\n",
+        "#@title <center> Work Satisfaction Questionnaire </center>\r\n",
         "\r\n",
-        "\r\n"
+        "\r\n",
+        "import ipywidgets as widgets"
       ],
-      "execution_count": 4,
+      "execution_count": 77,
       "outputs": []
     },
     {
@@ -418,60 +320,71 @@
       "source": [
         "import ipywidgets as widgets"
       ],
-      "execution_count": 5,
+      "execution_count": 78,
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "nvoiObU3uP9b"
+      },
+      "source": [
+        "#### <center> Work satisfaction - what it is and why it matters? </center>\r\n",
+        "\r\n",
+        "\r\n",
+        "\r\n",
+        "\r\n",
+        "\r\n",
+        "\r\n",
+        "\r\n"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
-        "id": "jK_ycPHdZJuK",
-        "outputId": "69fad6c3-c775-4d14-974f-b064de125b7a",
+        "id": "Bxx7P9O3gv_p",
+        "outputId": "169d59e1-c0fa-4ff6-f7aa-25fc43eb3e0c",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 101,
+          "height": 141,
           "referenced_widgets": [
-            "6ac8e50ae0814b39a9d580c03db7ad7d",
-            "fe1ba57c9e7146768944b29de35f5225",
-            "76350f926a0d484da96f18b521c9cc16",
-            "d00ee66bbc6e417db586193fe32477bb",
-            "67d74c482dbc444c85bb96e68998176d",
-            "0676e3e9f29a4d87b912908950261370",
-            "6abac11337644249b2ca9a0916a895d9",
-            "0e1c880f3959491f8e56f55fb1c091b2"
+            "9fc2453d3e4a4a808cebd5862189a45b",
+            "b425601384e441cda549f919a61aab15",
+            "2343c6e967124da8b087f312d142c5cc",
+            "a7e3c9f2f3a84ced90d591580ced028e",
+            "49b591c315534610ad93696ac7aca71a",
+            "cb9d3d429a624e3cb67319de844f7b2d",
+            "67a6a93079c24a1080ea9a111d61f85c",
+            "5393e55ac4e14cf0916f02e25fbf8a0f"
           ]
         }
       },
       "source": [
-        "widgets.Box(\r\n",
-        "    [\r\n",
-        "        widgets.Label(value='Label :'),\r\n",
-        "        widgets.RadioButtons(\r\n",
-        "            options=[\r\n",
-        "                'Option 1',\r\n",
-        "                'Option 2',\r\n",
-        "                'Option 3',\r\n",
-        "                'Option 4 ...................... '\r\n",
-        "            ],\r\n",
-        "            layout={'width': 'max-content'}\r\n",
-        "        )\r\n",
-        "    ]\r\n",
-        ")\r\n",
+        "#@title <center> Please, select an answer to all the questions bellow </center>\r\n",
         "\r\n",
         "\r\n",
-        "    HBox([Label('A description',layout=label_layout), IntSlider()])\r\n"
+        "widgets.VBox(\r\n",
+        "        [\r\n",
+        "            widgets.Label(value=(\"I feel satisfied with my job\")),\r\n",
+        "            widgets.RadioButtons(\r\n",
+        "                options=[\"Agree\",\"Somewhat Agree\",\"Somewhat Disagee\",\"Disagree\"],\r\n",
+        "                layout={'width': 'max-content'},\r\n",
+        "            )\r\n",
+        "        ],\r\n",
+        "        layout=widgets.Layout(width='100%', display='flex',align_items='center'))"
       ],
-      "execution_count": 11,
+      "execution_count": 80,
       "outputs": [
         {
           "output_type": "display_data",
           "data": {
             "application/vnd.jupyter.widget-view+json": {
-              "model_id": "6ac8e50ae0814b39a9d580c03db7ad7d",
+              "model_id": "9fc2453d3e4a4a808cebd5862189a45b",
               "version_minor": 0,
               "version_major": 2
             },
             "text/plain": [
-              "Box(children=(Label(value='Label :'), RadioButtons(layout=Layout(width='max-content'), options=('Option 1', 'O…"
+              "VBox(children=(Label(value='I feel satisfied with my job'), RadioButtons(layout=Layout(width='max-content'), o…"
             ]
           },
           "metadata": {
@@ -483,47 +396,29 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "QdGHiU3LanpV",
-        "outputId": "41886f40-8602-41fe-de5b-388382ace050",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 50,
-          "referenced_widgets": [
-            "1149cfbb57c1446fb22b8d143f5b3018",
-            "1235993172ce4b0d994e276cd217193c",
-            "3ef9ffde97134e7ba811290f5bd49fce"
-          ]
-        }
+        "cellView": "form",
+        "id": "gKjFZmioiNKj"
       },
       "source": [
-        "widgets.ToggleButtons(\r\n",
-        "    options=['Slow', 'Regular', 'Fast'],\r\n",
-        "    # description='Speed:',\r\n",
-        "    disabled=False,\r\n",
-        "    button_style='', # 'success', 'info', 'warning', 'danger' or ''\r\n",
-        "    tooltips=['Description of slow', 'Description of regular', 'Description of fast'],\r\n",
-        "#     icons=['check'] * 3\r\n",
-        ")"
+        "#@title <center> Commented out stuff </center>\r\n",
+        "\r\n",
+        "\r\n",
+        "# widgets.VBox(\r\n",
+        "#         [\r\n",
+        "#             widgets.Label(value=(\"I feel satisfied with my job\")),\r\n",
+        "#             widgets.ToggleButtons(\r\n",
+        "#     options=['Disagree', 'Somewhat Disagree', 'Somewhat Agree','Agree'],\r\n",
+        "#     # description='Speed:',\r\n",
+        "#     disabled=False,\r\n",
+        "#     button_style='', # 'success', 'info', 'warning', 'danger' or ''\r\n",
+        "#     tooltips=['Description of slow', 'Description of regular', 'Description of fast'],\r\n",
+        "# #     icons=['check'] * 3\r\n",
+        "# )\r\n",
+        "#         ],\r\n",
+        "#         layout=widgets.Layout(width='100%', display='flex',align_items='center'))"
       ],
-      "execution_count": 15,
-      "outputs": [
-        {
-          "output_type": "display_data",
-          "data": {
-            "application/vnd.jupyter.widget-view+json": {
-              "model_id": "1149cfbb57c1446fb22b8d143f5b3018",
-              "version_minor": 0,
-              "version_major": 2
-            },
-            "text/plain": [
-              "ToggleButtons(options=('Slow', 'Regular', 'Fast'), tooltips=('Description of slow', 'Description of regular', …"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          }
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
