--- a/Colab_github_test.ipynb
+++ b/Colab_github_test.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Colab_github_test.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNF8M3KquwzICy2ABEIChBs",
+      "authorship_tag": "ABX9TyPpcY3th0VMkv//xUHtP8kX",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2379,13 +2379,25 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "_hIU7OiUu3Es"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "_hIU7OiUu3Es",
+        "outputId": "17ea8420-b9e4-49d5-d7e2-723f6f01980f"
       },
       "source": [
-        ""
+        "print(q1.children[1].value)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 99,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Disagree\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
