--- a/Colab_github_test.ipynb
+++ b/Colab_github_test.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Colab_github_test.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPpcY3th0VMkv//xUHtP8kX",
+      "authorship_tag": "ABX9TyNkKTt4hBw0vbNaJxu9yHMW",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2074,9 +2074,19 @@
         "\r\n",
         "\r\n",
         "\r\n",
-        "\r\n",
         "\r\n"
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "zzrRu9J7ycv2"
+      },
+      "source": [
+        "# age, gender, contract_length, company_size, weeks_of_vacation, number_of_jobs_in_last_two_years, years_since_graduation, salary, country"
+      ],
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -2398,6 +2408,21 @@
           "name": "stdout"
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "GY_p9uXtySaX"
+      },
+      "source": [
+        "# Job Satisfaction Profile\r\n",
+        "\r\n",
+        "# Probabily of Leaving\r\n",
+        "\r\n",
+        "# Comparison with Others"
+      ],
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
